# decimate

./: .gitignore  CMakeLists.txt  README.md  index.cfg  index.html
source/: cmesh.hpp  command.hpp  decimate.cpp  decimate.hpp  tool.cpp  tool.hpp
